Fixed starter process

--- a/app/app.ini
+++ b/app/app.ini
@@ -1,6 +1,6 @@
 [uwsgi]
-wsgi-file = app/api.py
-callable = app
+wsgi-file = /app/run.py
+callable = application
 socket = :5000
 processes = 4
 threads = 2
